--- a/sass/components/_table_of_contents.scss
+++ b/sass/components/_table_of_contents.scss
@@ -10,7 +10,6 @@
     padding: 2px 0;
   }
   a {
-    display: inline-block;
     font-weight: 300;
     color: #757575;
     padding-left: 20px;
